# codex

./: .env.example  .gitignore  API.md  CONTRIBUTING.md  LICENSE  MODULES.md  README.md  ROADMAP.md  SPEC.md  ai-quests.jsx  ai-translate-ui.js  app.jsx  auto-cache.js  babelforge.jsx  bible.js  builder.jsx  cli.js  compare.jsx  components.jsx  crossref.jsx  data.js  dictionary.jsx  direct-api.js  gematria.js  help.jsx  i18n.js  index.html  install-service.sh  jewish-study.jsx  library.jsx  light-themes.js  manifest.json  mark-search.js  marketplace.jsx  modules.js  notes.jsx  oracle.jsx  panels-gen.js  panels.jsx  passage-guide.jsx  (+23 more)
.claude/: launch.json
data/: module-index.json  red-letter.json
data/help/: articles.json
data/modules/: easton-sample.json  plan-daf-yomi.json  plan-torah-triennial.json  strongs-greek.json  strongs-hebrew.json  tsk-sample.json  voice-templates.json
extension/: README.md  background.js  content.js  manifest-newtab.json  manifest.json  newtab.css  newtab.html  newtab.js  popup.css  popup.html  popup.js  ref-parser.js
scripts/: build-easton.js  fetch_enoch.mjs
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
