[package]
name = "codex"
version = "0.1.0"
description = "CODEX — distraction-respectful Bible study desktop"
authors = ["CODEX contributors"]
license = "MIT"
repository = "https://github.com/codex-app/codex"
edition = "2021"
rust-version = "1.75"

# Phase 5.5 v1 — Linux first (AppImage / .deb / .rpm). macOS + Windows
# follow after Linux ships and stabilizes.

[lib]
name = "codex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-single-instance = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Tauri uses Cargo features for build-time toggles. `custom-protocol` is
# enabled in release builds; `default` is dev (devtools etc.).
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
